--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Ruby Committers</h1>
+<%= link_to 'fork me on github', 'http://github.com/tenderlove/rubycommitters.org' %>
 <ul>
 <%= render :partial => 'account', :collection => @accounts %>
 </ul>
