updated design for index and account

--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,4 +1,6 @@
-<h1>Ruby Committers</h1>
+<div id="header"> 
+	<div id="topbar"></div>
+</div>
 <%= link_to 'fork me on github', 'http://github.com/tenderlove/rubycommitters.org' %>
 <ul>
 <%= render :partial => 'account', :collection => @accounts %>
