--- a/app/views/accounts/_account.html.erb
+++ b/app/views/accounts/_account.html.erb
@@ -1,79 +1,42 @@
-<li>
-  <table>
+<div class="account">
+	<div class="portrait">
+		<% unless account.portraits.empty? %>
+   		<%= render :partial => 'portrait', :collection => account.portraits %>
+  	<% end %>
+	</div>
+	<div class="names">
+		<%= account.username %>
+		
+  	<% unless account.names.empty? %>
+			Names: <%= render :partial => 'name', :collection => account.names %>
+		<% end %>
+		
+		<% unless account.nicks.empty? %>
+  		Nicknames: <%= render :partial => 'name', :collection => account.nicks %>
+  	<% end %>
+  </div>
+	<div class="connect">
+  	<% unless account.sites.empty? %>
+  	  Websites: <%= render :partial => 'site', :collection => account.sites %>
+  	<% end %>
+  	
+  	<% unless account.services.empty? %>
+  	  Connect <%= render :partial => 'service', :collection => account.services %>
+  	<% end %>
+  </div>
+  <!-- FIXME: unsure how to link to ISBN. :-( -->
+  <!--
+  <% unless account.books.empty? %>
     <tr>
-      <td>Account:</td>
-      <td><%= account.username %></td>
+      <td>Books:</td>
+      <td>
+        <ul>
+          <% account.books.each do |book| %>
+            <li><%= book.key %></li>
+          <% end %>
+        </ul>
+      </td>
     </tr>
-
-    <% unless account.names.empty? %>
-      <tr>
-        <td>Names:</td>
-        <td>
-          <ul>
-            <%= render :partial => 'name', :collection => account.names %>
-          </ul>
-        </td>
-      </tr>
-    <% end %>
-
-    <% unless account.nicks.empty? %>
-      <tr>
-        <td>Nicknames:</td>
-        <td>
-          <ul>
-            <%= render :partial => 'name', :collection => account.nicks %>
-          </ul>
-        </td>
-      </tr>
-    <% end %>
-
-    <% unless account.sites.empty? %>
-      <tr>
-        <td>Sites:</td>
-        <td>
-          <ul>
-            <%= render :partial => 'site', :collection => account.sites %>
-          </ul>
-        </td>
-      </tr>
-    <% end %>
-
-    <% unless account.services.empty? %>
-      <tr>
-        <td>Services:</td>
-        <td>
-          <ul>
-            <%= render :partial => 'service', :collection => account.services %>
-          </ul>
-        </td>
-      </tr>
-    <% end %>
-
-    <% unless account.portraits.empty? %>
-      <tr>
-        <td>Portraits:</td>
-        <td>
-          <ul>
-            <%= render :partial => 'portrait', :collection => account.portraits %>
-          </ul>
-        </td>
-      </tr>
-    <% end %>
-
-    <!-- FIXME: unsure how to link to ISBN. :-( -->
-    <!--
-    <% unless account.books.empty? %>
-      <tr>
-        <td>Books:</td>
-        <td>
-          <ul>
-            <% account.books.each do |book| %>
-              <li><%= book.key %></li>
-            <% end %>
-          </ul>
-        </td>
-      </tr>
-    <% end %>
-    -->
-  </table>
-</li>
+  <% end %>
+  -->
+</div>
