--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -1,7 +1,61 @@
+body{
+	font-family: Arial;
+	margin: 0;
+}
+
 .image-wrapper {
   height: 100px;
 }
 
 .image-wrapper img {
   height: 100%;
+}
+
+#header{
+	background-image:url('../images/background.jpg');
+	height: 100px;
+}
+
+#header_content{
+	width: 800px;
+	margin: 0 auto;
+	height: 100px;
+}
+
+#topbar{
+	background: #000000;
+	width: 100%;
+	height: 5px;
+}
+
+#body_content{
+	width: 800px;
+	margin: 0 auto;
+	height: 150px;
+}
+
+.account{
+	width: 800px;
+	clear: both;
+}
+
+.portrait{
+	float: left;
+	width: 100px;
+}
+
+.names{
+	float: left;
+	width: 350px;	
+}
+
+.connect{
+	float: left;
+	width: 350px;	
+}
+
+.fork{
+	font-family: Arial;
+	font-size: 14px;
+	float: right;
 }
