Set h1 to center; add paddings to h1; added GitHub ribbon to layout

--- a/app/stylesheets/master.sass
+++ b/app/stylesheets/master.sass
@@ -1,10 +1,19 @@
 @import "compass/reset"
 
 h1
-  font-size: 30px
+  font-size: 50px
+  text-align: center
+  padding: 30px 0
 
 .image-wrapper
   height: 100px
 
   img
     height: 100%
+
+ul
+  li
+    width: 30%
+    margin-left: 2.5%
+    float: left
+    border: 1px solid black
