Set ruby pattern to background

--- a/app/stylesheets/master.sass
+++ b/app/stylesheets/master.sass
@@ -1,9 +1,12 @@
 @import "compass/reset"
 
+body
+  background: url(/images/ruby_pattern.png)
+
 h1
-  font-size: 50px
+  font-size: 60px
   text-align: center
-  padding: 30px 0
+  padding: 40px 0
 
 .image-wrapper
   height: 100px
@@ -16,4 +19,5 @@ ul
     width: 30%
     margin-left: 2.5%
     float: left
-    border: 1px solid black
+    border: 1px solid #efc7d2
+    background: #fefefe
