--- a/app/views/accounts/_account.html.erb
+++ b/app/views/accounts/_account.html.erb
@@ -1,4 +1,4 @@
-<li class="commiter">
+<td class="commiter">
   <div class="commiter-wrapper">
     <h2><%= account.username %></h2>
     <% if account.names.length > 0 %>
@@ -68,4 +68,4 @@
       -->
     </table>
   </div>
-</li>
+</td>
