--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,6 +1,8 @@
 <h1>Ruby Committers</h1>
 <% @accounts.each_slice(3) do |account_slice| %>
-  <ul>
-    <%= render :partial => 'account', :collection => account_slice %>
-  </ul>
+  <table class="commiters">
+    <tr class="commiters">
+      <%= render :partial => 'account', :collection => account_slice %>
+    </tr>
+  </table>
 <% end %>
