Set correct position to portraits

--- a/app/stylesheets/master.sass
+++ b/app/stylesheets/master.sass
@@ -38,8 +38,6 @@ table.commiters
   width: 100%
   border-spacing: 20px
 
-  tr.commiters
-
   td.commiter
     @include border-radius(10px)
     vertical-align: top
@@ -49,3 +47,7 @@ table.commiters
 
     .commiter-wrapper
       padding: 15px 20px
+
+.portraits
+  float: left
+  margin-right: 10px
