Fix commiter markup

--- a/app/stylesheets/master.sass
+++ b/app/stylesheets/master.sass
@@ -45,6 +45,7 @@ table.commiters
 .portraits
   float: left
   margin-right: 30px
+  width: 1px
 
   .image-wrapper
     width: 70px
@@ -52,5 +53,9 @@ table.commiters
   img
     width: 100%
     padding: 5px
-    border: 1px solid #bbb
-    @include box-shadow(#999, 0, 0, 6px)
+    border: 1px solid #ddd
+    @include box-shadow(#C2C2C2, 0, 0, 5px)
+
+.commiter-data
+  padding-left: 95px
+  //float: left
