--- a/app/views/accounts/_account.html.erb
+++ b/app/views/accounts/_account.html.erb
@@ -9,63 +9,65 @@
       <% end %>
     </ul>
 
-    <h2><%= account.username %></h2>
+    <div class="commiter-data">
+      <h2><%= account.username %></h2>
 
-    <% if account.names.length > 0 %>
-      <h3>
-        Other accouts: <%= account.names.map(&:value).join(', ') %>
-      </h3>
-    <% end %>
-
-    <table>
-      <% if account.nicks.length > 0 %>
-        <tr>
-          <td>Nicknames:</td>
-          <td>
-            <ul>
-              <%= render :partial => 'name', :collection => account.nicks %>
-            </ul>
-          </td>
-        </tr>
+      <% if account.names.length > 0 %>
+        <h3>
+          Other accouts: <%= account.names.map(&:value).join(', ') %>
+        </h3>
       <% end %>
 
-      <% if account.sites.length > 0 %>
-        <tr>
-          <td>Sites:</td>
-          <td>
-            <ul>
-              <%= render :partial => 'site', :collection => account.sites %>
-            </ul>
-          </td>
-        </tr>
-      <% end %>
+      <table>
+        <% if account.nicks.length > 0 %>
+          <tr>
+            <td>Nicknames:</td>
+            <td>
+              <ul>
+                <%= render :partial => 'name', :collection => account.nicks %>
+              </ul>
+            </td>
+          </tr>
+        <% end %>
 
-      <% if account.services.length > 0 %>
-        <tr>
-          <td>Services:</td>
-          <td>
-            <ul>
-              <%= render :partial => 'service', :collection => account.services %>
-            </ul>
-          </td>
-        </tr>
-      <% end %>
+        <% if account.sites.length > 0 %>
+          <tr>
+            <td>Sites:</td>
+            <td>
+              <ul>
+                <%= render :partial => 'site', :collection => account.sites %>
+              </ul>
+            </td>
+          </tr>
+        <% end %>
 
-      <!-- FIXME: unsure how to link to ISBN. :-( -->
-      <!--
-      <% if account.books.length > 0 %>
-        <tr>
-          <td>Books:</td>
-          <td>
-            <ul>
-              <% account.books.each do |book| %>
-                <li><%= book.key %></li>
-              <% end %>
-            </ul>
-          </td>
-        </tr>
-      <% end %>
-      -->
-    </table>
+        <% if account.services.length > 0 %>
+          <tr>
+            <td>Services:</td>
+            <td>
+              <ul>
+                <%= render :partial => 'service', :collection => account.services %>
+              </ul>
+            </td>
+          </tr>
+        <% end %>
+
+        <!-- FIXME: unsure how to link to ISBN. :-( -->
+        <!--
+        <% if account.books.length > 0 %>
+          <tr>
+            <td>Books:</td>
+            <td>
+              <ul>
+                <% account.books.each do |book| %>
+                  <li><%= book.key %></li>
+                <% end %>
+              </ul>
+            </td>
+          </tr>
+        <% end %>
+        -->
+      </table>
+    </div>
   </div>
 </td>
