--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,8 @@
   <title>Ruby Committers</title>
   <%= stylesheet_link_tag 'master' %>
   <link href='http://fonts.googleapis.com/css?family=Cuprum' rel='stylesheet' type='text/css'>
-  <%= javascript_include_tag :defaults %>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+  <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tag %>
   <%= analytics_tag %>
 </head>
