Basic layout established.

--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,5 +1,10 @@
-<h1>Ruby Committers</h1>
-<%= link_to 'fork me on github', 'http://github.com/tenderlove/rubycommitters.org' %>
-<ul>
-<%= render :partial => 'account', :collection => @accounts %>
-</ul>
+<section id="gutter">
+  <h1>Ruby Committers</h1>
+</section>
+
+<section id="wrapper" class="container_12">
+  <%= link_to 'fork me on github', 'http://github.com/tenderlove/rubycommitters.org' %>
+  <ul>
+  <%= render :partial => 'account', :collection => @accounts %>
+  </ul>
+</section>
