Added header, footer and framing elements + started re-structuring HTML.

--- a/app/views/accounts/_account.html.erb
+++ b/app/views/accounts/_account.html.erb
@@ -1,79 +1,67 @@
-<li class="grid_4">
-  <table>
-    <tr>
-      <td>Account:</td>
-      <td><%= account.username %></td>
-    </tr>
-
-    <% unless account.names.empty? %>
-      <tr>
-        <td>Names:</td>
-        <td>
-          <ul>
-            <%= render :partial => 'name', :collection => account.names %>
-          </ul>
-        </td>
-      </tr>
-    <% end %>
-
-    <% unless account.nicks.empty? %>
-      <tr>
-        <td>Nicknames:</td>
-        <td>
-          <ul>
-            <%= render :partial => 'name', :collection => account.nicks %>
-          </ul>
-        </td>
-      </tr>
-    <% end %>
-
-    <% unless account.sites.empty? %>
-      <tr>
-        <td>Sites:</td>
-        <td>
-          <ul>
-            <%= render :partial => 'site', :collection => account.sites %>
-          </ul>
-        </td>
-      </tr>
-    <% end %>
-
-    <% unless account.services.empty? %>
-      <tr>
-        <td>Services:</td>
-        <td>
-          <ul>
-            <%= render :partial => 'service', :collection => account.services %>
-          </ul>
-        </td>
-      </tr>
-    <% end %>
-
+<li>
+  <article class="card">
     <% unless account.portraits.empty? %>
-      <tr>
-        <td>Portraits:</td>
-        <td>
-          <ul>
-            <%= render :partial => 'portrait', :collection => account.portraits %>
-          </ul>
-        </td>
-      </tr>
+      <div class="photo"><%= render :partial => 'portrait', :collection => account.portraits %></div>
     <% end %>
+    <section class="info">
+      <h2><%= account.username %></h2>
 
-    <!-- FIXME: unsure how to link to ISBN. :-( -->
-    <!--
-    <% unless account.books.empty? %>
-      <tr>
-        <td>Books:</td>
-        <td>
-          <ul>
-            <% account.books.each do |book| %>
-              <li><%= book.key %></li>
-            <% end %>
-          </ul>
-        </td>
-      </tr>
-    <% end %>
-    -->
-  </table>
+      <% unless account.names.empty? %>
+        Names:
+        <ul>
+          <%= render :partial => 'name', :collection => account.names %>
+        </ul>
+      <% end %>
+
+      <% unless account.nicks.empty? %>
+        <tr>
+          <td>Nicknames:</td>
+          <td>
+            <ul>
+              <%= render :partial => 'name', :collection => account.nicks %>
+            </ul>
+          </td>
+        </tr>
+      <% end %>
+
+      <% unless account.sites.empty? %>
+        <tr>
+          <td>Sites:</td>
+          <td>
+            <ul>
+              <%= render :partial => 'site', :collection => account.sites %>
+            </ul>
+          </td>
+        </tr>
+      <% end %>
+
+      <% unless account.services.empty? %>
+        <tr>
+          <td>Services:</td>
+          <td>
+            <ul>
+              <%= render :partial => 'service', :collection => account.services %>
+            </ul>
+          </td>
+        </tr>
+      <% end %>
+
+      <!-- FIXME: unsure how to link to ISBN. :-( -->
+      <!--
+      <% unless account.books.empty? %>
+        <tr>
+          <td>Books:</td>
+          <td>
+            <ul>
+              <% account.books.each do |book| %>
+                <li><%= book.key %></li>
+              <% end %>
+            </ul>
+          </td>
+        </tr>
+      <% end %>
+      -->
+    </table>
+    </div>
+  </article>
 </li>
